<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/src_dest_pv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_destination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_pv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/src_dest_pv"
                android:orientation="horizontal"
                android:padding="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_departure"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/departure_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/returndate_pv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_return"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/returnDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_ff2c2a2d"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_pv"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_bg"
                android:text="Modify"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </LinearLayout>
</layout>